--- a/css/moudules.css
+++ b/css/moudules.css
@@ -1,6 +1,25 @@
-img {
+img{
+    display: flex;
+    flex: wrap;
     width: 20%;
     height: 20%;
     border: 1px solid black;
     margin: 1em;
+    align-items: center;
+}
+
+section#photo-template2 {
+    display: flex;
+    flex-direction: row;
+    flex:wrap;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+section#photo-template {
+    display: flex;
+    flex-direction: row;
+    flex:wrap;
+    flex-wrap: wrap;
+    align-items: center;
 }
